<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true">
    <LinearLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/hello_second_fragment" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second1"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second2"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second3"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second3" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:onClick="onCheckboxClicked" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second4"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second4" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:onClick="onCheckboxClicked" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second5"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second5" />

            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:onClick="onCheckboxClicked" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second6"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second7"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second8"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second8" />

            <CheckBox
                android:id="@+id/checkbox8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:onClick="onCheckboxClicked" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second9"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second9" />

            <CheckBox
                android:id="@+id/checkbox9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:onClick="onCheckboxClicked" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second10"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second10" />

            <CheckBox
                android:id="@+id/checkbox10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:onClick="onCheckboxClicked" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second11"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second11" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second12"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second13"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second13" />

            <CheckBox
                android:id="@+id/checkbox13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:onClick="onCheckboxClicked" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second14"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second14" />

            <CheckBox
                android:id="@+id/checkbox14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:onClick="onCheckboxClicked" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_second15"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/textview_second15" />

            <CheckBox
                android:id="@+id/checkbox15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:onClick="onCheckboxClicked" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/button_color_selector"
            android:text="@string/previous"/>
        <Button
            android:id="@+id/button_second2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/button_color_selector"
            android:text="@string/next" />

    </LinearLayout>
    </LinearLayout>
</ScrollView>
